--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,11 @@ html, body {
 header {
   width: 100%;
   height: 200px;
-  background-color: #ccc;
+  background: #ccc;
+}
+
+nav {
+  width: 100%;
+  height: 100px;
+  background: #999;
 }
