--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,12 @@ header {
   width: 100%;
   height: 200px;
   background: #ccc;
+  position: relative;
 }
 
 nav {
   width: 100%;
   height: 100px;
   background: #999;
+  position: absolute;
 }
