--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,13 @@ nav {
   position: absolute;
   bottom: 0;
 }
+
+section {
+  width: 100%;
+  height: 500px;
+  background: #95a5a6;
+}
+
+footer {
+  background: #b2de27;
+}
